fixed layout bugs

--- a/css/analysisSidebar.css
+++ b/css/analysisSidebar.css
@@ -1,6 +1,7 @@
 .analysis-sidebar-view {
     line-height: 40px;
     border-right: 1px solid #007095;
+    overflow: auto;
     width: 250px;
 }
 
